sign up page tests are completed.

--- a/configuration.properties
+++ b/configuration.properties
@@ -2,6 +2,8 @@ url=https://www.amazon.com.tr
 
 validEmail=gerardoyle01@gmail.com
 
+signUpValidEmail=signuptest29@gmail.com
+
 validPassword=Bitirme2024
 
 invalidEmail=invalidemail21093@gmail.com
@@ -9,3 +11,7 @@ invalidEmail=invalidemail21093@gmail.com
 invalidPassword=bitir2024
 
 invalidEmailWithoutDomain=gerardoyle01
+
+signUpName=John
+
+alreadyInUseEmail=gerardoyle01@gmail.com
